--- a/DataScience/DataAnalysisFootball/match-outcome-prediction-in-football.ipynb
+++ b/DataScience/DataAnalysisFootball/match-outcome-prediction-in-football.ipynb
@@ -17,7 +17,8 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "_cell_guid": "21de67ac-0da9-1da6-b220-4cb24d29bf85"
+    "_cell_guid": "21de67ac-0da9-1da6-b220-4cb24d29bf85",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -52,7 +53,8 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "_cell_guid": "2c142d7e-4d66-0433-024f-190103376259"
+    "_cell_guid": "2c142d7e-4d66-0433-024f-190103376259",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -875,7 +877,8 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "_cell_guid": "c6ab8c81-e6f7-395c-c3f2-a2ea41ae25bd"
+    "_cell_guid": "c6ab8c81-e6f7-395c-c3f2-a2ea41ae25bd",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -990,7 +993,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "_cell_guid": "19ceff90-3a9d-6d16-ffda-aec2bc2bf96c"
+    "_cell_guid": "19ceff90-3a9d-6d16-ffda-aec2bc2bf96c",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1031,7 +1035,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "_cell_guid": "d5885082-77bf-70c6-6ab0-0c1f64af3e74"
+    "_cell_guid": "d5885082-77bf-70c6-6ab0-0c1f64af3e74",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1055,7 +1060,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "_cell_guid": "82202554-bfc1-215d-fb7f-d6b49701cb0c"
+    "_cell_guid": "82202554-bfc1-215d-fb7f-d6b49701cb0c",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1074,7 +1080,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "_cell_guid": "a1c1c6b7-721f-3f9d-f938-2a82c5efd05c"
+    "_cell_guid": "a1c1c6b7-721f-3f9d-f938-2a82c5efd05c",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1126,7 +1133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
