--- a/DataScience/DataAnalysisFootball/regression-with-kerasregressor.ipynb
+++ b/DataScience/DataAnalysisFootball/regression-with-kerasregressor.ipynb
@@ -95,7 +95,8 @@
    "execution_count": 26,
    "metadata": {
     "_cell_guid": "f5f65af0-208c-46cd-a381-a15929bb6b0a",
-    "_uuid": "32d2817ad3d40240a930a79bf71f63f8576eb52e"
+    "_uuid": "32d2817ad3d40240a930a79bf71f63f8576eb52e",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -107,7 +108,8 @@
    "execution_count": 27,
    "metadata": {
     "_cell_guid": "f0e9529b-e249-44b3-a1e4-d1a7007bfc35",
-    "_uuid": "9e6fd8bd1097c88689c6bf36b0b73283e0db80fe"
+    "_uuid": "9e6fd8bd1097c88689c6bf36b0b73283e0db80fe",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -129,7 +131,8 @@
    "execution_count": 28,
    "metadata": {
     "_cell_guid": "d48383d0-0a17-48bd-898e-7997dcafaf13",
-    "_uuid": "fe18ed8485386e9f513afcf0c32abe1dfcb264c8"
+    "_uuid": "fe18ed8485386e9f513afcf0c32abe1dfcb264c8",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -150,7 +153,8 @@
    "execution_count": 29,
    "metadata": {
     "_cell_guid": "7c7de245-0da6-4440-9b18-cc7d92502ce5",
-    "_uuid": "15d35ff873fd496ad8e846b31a13c113658f8719"
+    "_uuid": "15d35ff873fd496ad8e846b31a13c113658f8719",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -194,7 +198,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "kfold = TimeSeriesSplit(n_splits=2)"
@@ -268,7 +274,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -287,7 +295,8 @@
    "execution_count": 22,
    "metadata": {
     "_cell_guid": "47d9eec5-d1d3-4418-aa6f-8cd6f21e4ff4",
-    "_uuid": "f9b96627ba859a905fd383aae95614c690d1f396"
+    "_uuid": "f9b96627ba859a905fd383aae95614c690d1f396",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -307,7 +316,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -316,7 +327,8 @@
    "execution_count": null,
    "metadata": {
     "_cell_guid": "d71a5af8-706c-4962-83eb-ae2b1c0d5f34",
-    "_uuid": "72eefc5d441d414d5b8e813061619320a52d6b9b"
+    "_uuid": "72eefc5d441d414d5b8e813061619320a52d6b9b",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -334,7 +346,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "results"
@@ -399,7 +413,8 @@
    "execution_count": 101,
    "metadata": {
     "_cell_guid": "30dbf52e-dabf-43a0-8500-4f6ba6837fe9",
-    "_uuid": "8b54f63637c3075105dbf0041cd5ddf51e7e31e5"
+    "_uuid": "8b54f63637c3075105dbf0041cd5ddf51e7e31e5",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -880,6 +895,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
